@@ -1,13 +1,13 @@
 Package: bigRR
 Type: Package
 Title: Generalized Ridge Regression (with special advantage for p >> n cases)
-Version: 1.3-5
-Date: 2013-04-29
+Version: 1.3-7
+Date: 2013-05-08
 Author: Xia Shen, Moudud Alam and Lars Ronnegard
 Maintainer: Xia Shen <xia.shen@slu.se>
 Description: The package fits large-scale (generalized) ridge regression for various distributions of response. The shrinkage parameters (lambdas) can be pre-specified or estimated using an internal update routine (fitting a heteroscedastic effects model, or HEM). It gives possibility to shrink any subset of parameters in the model. It has special computational advantage for the cases when the number of shrinkage parameters exceeds the number of observations. For example, the package is very useful for fitting large-scale omics data, such as high-throughput genotype data (genomics), gene expression data (transcriptomics), metabolomics data, etc.
-Depends: R (>= 2.10), hglm
+Depends: R (>= 2.10), hglm, DatABEL
 Suggests: gputools
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2013-04-29 17:55:18 UTC; xia
+Packaged: 2013-05-08 21:13:02 UTC; xia
