@@ -1,3 +1,12 @@
+2013-05-08 08:25  xia
+
+    * Update to R-Forge version 1.3-7
+    * hugeRR() and hugeRR_update() implemented, in order to
+      deal with super large data that cannot be loaded into
+      memory in one go. DatABEL package is used for quickly
+      access binary data from the hard drive.
+    * User tracking off-line bug fixed
+
 2013-04-29 15:25  xia
 
     * From now on, we keep track of our users
